# midi_pedal_f411_tinyUSB_vscode

./: .gitignore  .mxproject  ARCHITECTURE_DIAGRAM.md  BUILD_PROCESS.md  CMSIS_INTRINSICS_GUIDE.md  CMakeLists.txt  COMPOSITE_USB_README.md  Cargo.toml  HID_KEYBOARD_REFERENCE.md  MIDI_HIRES_GUIDE.md  MIDI_HIRES_NOTE_VELOCITY.md  MIGRATION_SUMMARY.md  README.md  RUST_MIGRATION_PLAN.md  compile_commands.json  kilo_code_task_feb-21-2026_2-49-09-am.md  midi_pedal_f411_tinyUSB_vscode.ioc
.cargo/: config.toml
Core/Inc/: main.h  power.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: adc.c  gpio.c  main.c  rtc.c  stm32f4xx_it.c  tim.c
Pedal_f411/: board_api.c  board_api.h  logic_rust.h  logic_rust.rs  midi_hires.h  midi_hires_example.cpp  pedal.cpp  pedal.hpp  power.cpp  rust_usage_example.cpp  tusb_config.h  usb_descriptors.c  usb_descriptors.h
cmake/: rust.cmake
cmake/stm32cubemx/: CMakeLists.txt
midi_pedal_rust/: Cargo.toml  build.rs  memory.x
midi_pedal_rust/.cargo/: config.toml
midi_pedal_rust/src/: main.rs
tinyusb/hw/bsp/: board_api.h
