[package]
name = "midi_pedal_firmware"
version = "0.1.0"
edition = "2021"
description = "MIDI Pedal Controller Firmware with Rust components"

[lib]
path = "Pedal_f411/logic_rust.rs"
crate-type = ["staticlib"]
name = "logic_rust"

# Dependencies

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
panic = "abort"
