[package]
name = "midi_pedal_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Embedded HAL for STM32F4 - provides PAC and interrupts
stm32f4xx-hal = { version = "0.18", features = ["rt", "stm32f411"] }
stm32f4 = { version = "0.15", features = ["stm32f411"] }
cortex-m-rt = "0.7"

# Panic behavior
panic-halt = "0.2"

[profile.release]
opt-level = "s"
lto = true

[build-dependencies]
cc = "1.0"
